fixing subheader spacing

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ body {
 
 .subheader {
     height: 60px;
+    width: 100%;
     position: absolute;
     padding: 5px 10px;
     top: 60px;
@@ -55,7 +56,7 @@ button {
     display: grid;
     position: absolute;
     grid-template-columns: repeat(5, 1fr);
-    height: calc(100% - 60px);
+    height: calc(100% - 120px);
     top: 120px;
     width: 100%;
     text-align: center;
